css/main.css
* {
margin: 0;
padding: 0;
box-sizing: border-box;
}

:root {
    --dark: #070707;
    --sizeindex: calc(1vw + 1vh);
    --transition: .75s cubic-bezier(.2, .6, 0, 1);
}

@font-face {
    font-family: raleway_m;
    src: url(../fonts/raleway-v22-cyrillic-300.woff2);
    font-weight:300;
}

@font-face {
    font-family: raleway_m;
    src: url(../fonts/raleway-v22-cyrillic-900.woff2);
    font-weight:900;
}

body, html {
    width: 100%;
    height: 100%;
    background-color: var(--dark);
    color: #fff;
    font-family: raleway_m, sans-serif;
    overflow: hidden;
    line-height: 1.8;

}


/* Style for slider */

.swiper.slider { 
    height: 100%;
    transform: rotate( 15deg );
    overflow: visible;
    top: 10vh;

}

.slier__wrapper {
 transition: var(--transition);
 will-change: transform;
}

.slider__item { 
    max-height: 75vh;
    overflow: hidden;
    cursor: pointer;
    transition: transform var(--transition), box-shadow var(--transition) ;
}

.slider_img {
 width: 300%;
 height: 100%;
 background-size: cover;
 position: absolute;
 left: -100%;
 transition:  var(--transition)!important;
 will-change: transform;

}

.slider_bg {
	z-index: -5;
	transform: rotate(-20deg)!important;
	top: -90vh;
	left: -10vh;
	opacity: .15;
	filter: blur(120px) saturate(10);
    pointer-events:none
    
}

.slider_bg .slider__item {
	max-height: 100vh;
}

.swiper-wrapper > .slider__item.opened {
	z-index: 2;
	transform: rotate(-15deg) scale(1.45);
	box-shadow: rgb(0 0 0 / .75) 0 0 0 10000px;
}

/* Title with text */

.description {
    position: absolute;
    font-size: calc(var(--sizeindex) * .8);
    top: 20vh;
    left: 8vw;
    max-width: 24vw;
    transition: opacity var(--transition), transform  var(--transition) ;
}

.logo {
    font-size: calc(var(--sizeindex) * 3.6);
    font-weight: 900;
    display: inline-block;
    background: linear-gradient(45deg, DarkMagenta, Tomato, Violet);
    /* Gradient for text */
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;

}

.description p {
    opacity: .9;
    transition: transform var(--transition);
    transition-duration: 3s;
}

.description.hidden p {
    transform: translateY(5vh);
}

.description.hidden {
    opacity: 0;
    transform: translateY(2vh);
}

